--- a/app/templates/edit_teacherprofile.html
+++ b/app/templates/edit_teacherprofile.html
@@ -52,12 +52,17 @@
         </tr>
       </thead>
       <tbody>
+        <script>
+          let statusValue;
+          let select;
+          let newOption;
+        </script>
         {% for i in range(1, 11) %}
         <tr>
           <td>{{ i }}</td>
           <td><input type="text" name="class{{ i }}" value="{{ schedule[i-1][0] if schedule[i-1] }}"" class="form-control"></td>
           <td>
-            <select name="status{{ i }}" value="{{ schedule[i-1][1] if schedule[i-1] }}" class="form-control form-select">
+            <select name="status{{ i }}" value="{{ schedule[i-1][1] if schedule[i-1] }}" class="form-control form-select" id="status{{ i }}">
               <option>Never free (teaching)</option>
               <option>Never free (working/lunch/etc)</option>
               <option>Free for walk-ins</option>
@@ -68,6 +73,25 @@
             </select>
           </td>
         </tr>
+        <script>
+          statusValue = "{{ schedule[i-1][1] if schedule[i-1] }}";
+          select = document.getElementById("status{{ i }}");
+          select.selectedIndex = -1;
+          if (statusValue) {
+            for (let i = 0, j = select.options.length; i < j; i++) {
+              if (select.options[i].innerHTML === statusValue) {
+                select.selectedIndex = i;
+                break;
+              }
+            }
+          }
+          if (select.selectedIndex === -1) {
+            newOption = document.createElement("option");
+            newOption.innerHTML = statusValue;
+            select.appendChild(newOption);
+            select.selectedIndex = select.options.length - 1;
+          }
+        </script>
         {% endfor %}
       </tbody>
     </table>
