--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
-  <h1>Your Profile</h1>
+  <h1>Teacher Profile</h1>
   {% if is_teacher %}
   <p><a href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a></p>
   {% endif %}
