find teachers, not find teachers to star

--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -6,7 +6,7 @@
 <div class="container-xxl my-4 bd-layout">
     <p>Are you a teacher? Please contact us for assistance.</p>
 
-    <h1>Find Teachers To Star</h1>
+    <h1>Find Teachers</h1>
 
     <div class="input-group rounded">
         <form action="/search" method="POST">
