--- a/app/templates/student_searchresults.html
+++ b/app/templates/student_searchresults.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
   <a href={{url_for("student")}}>Go Back to Starred Teachers</a>
-  <h1>Find Teachers To Star</h1>
+  <h1>Find Teachers</h1>
 
   <form action="/search" method="POST">
     <input type="text" placeholder="Search...">
