--- a/app/templates/student_searchresults.html
+++ b/app/templates/student_searchresults.html
@@ -14,14 +14,15 @@
 
   <!-- loop through the results here and post them with links to the page (right now, it's not possible to have more than 1 result) -->
   <ul>
+    {% for hex, data in info %}
     <li>
-      {{info[0]}} ({{info[1]}})
+      {{data[0]}} ({{data[1]}})
     </li>
     <form action="/schedule/{{hex}}" method="POST">
-      <input type="hidden" value="{{info[1]}}" name="email">
+      <input type="hidden" value="{{data[1]}}" name="email">
       <input type="submit" value="View Full Profile"> 
     </form>
-
+    {% endfor %}
   </ul>
 
 </div>
