--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if "google_id" in session %}
+                    {% if not is_teacher %}
+                    <a class="nav-link" href="{{ url_for('student') }}">Find Teachers</a>
+                    {% endif %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Starred Teachers
