--- a/app/templates/student_searchresults.html
+++ b/app/templates/student_searchresults.html
@@ -7,7 +7,7 @@
   <h1>Find Teachers</h1>
 
   <form action="/search" method="POST">
-    <input type="text" placeholder="Search...(letters only)"
+    <input type="text" name = "teacher" placeholder="Search...(letters only)"
     onkeydown="return /[a-z]/i.test(event.key)">
     <input type="submit" value="Search">
   </form>
