--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,8 @@
                     {% if "google_id" in session %}
                     {% if not is_teacher %}
                     <a class="nav-link" href="{{ url_for('student') }}">Find Teachers</a>
+                    {% else %}
+                    <a class="nav-link" href="{{ url_for('search') }}">Find Teachers</a>
                     {% endif %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
