--- a/app/templates/teacher_landing.html
+++ b/app/templates/teacher_landing.html
@@ -1,20 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Welcome to your profile{% endblock %}
-
-{% block links %}
-
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('view_teacherprofile') }}">View Profile</a>
-      </li>
-  </ul>
-</div>
-
-{% endblock %}
+{% block title %}Find Teachers{% endblock %}
 
 {% block content %}
 
@@ -23,13 +8,11 @@
 </div>
 <link href="{{url_for('static',filename='css/star.css')}}" rel="stylesheet">
 <div class="container-xxl my-4 bd-layout">
-    <p>Are you a teacher? Please contact us for assistance.</p>
-
     <h1>Find Teachers</h1>
 
     <div class="input-group rounded">
-        <form action="/search" method="POST">
-            <input type="text" name="teacher" placeholder="Search...(letters only)" 
+        <form action="{{ url_for('search') }}" method="POST">
+            <input type="text" name="teacher" placeholder="Search... (letters only)" 
             class="form-control rounded" aria-label="Search" 
             aria-describedby="search-addon"
             onkeydown="return /[a-z]/i.test(event.key)">
@@ -39,7 +22,7 @@
     </div>
 
 
-    <form action="/teacher" method="POST">
+    <form action="{{ url_for('teacher') }}" method="POST">
       <table>
           <tr>
               <th style="padding-right:20px;">Star</th>
@@ -50,13 +33,13 @@
           <tr>
               <td>
                   {% if id in starred_teachers_hex %}
-                  <input type="checkbox" name="starred_id" value={{id}} class="star" checked>
+                  <input type="checkbox" name="starred_id" value="{{ id }}" class="star" checked>
                   {% else %}
-                  <input type="checkbox" name="starred_id" value={{id}} class="star">
+                  <input type="checkbox" name="starred_id" value="{{ id }}" class="star">
                   {% endif %}
                   
               </td>
-              <td style="padding-top: 15px;"><a href="{{url_for("view_teacher", hex=id)}}">{{name}}</a></td> <!-- this will link to the teacher's profile -->
+              <td style="padding-top: 15px;"><a href="{{ url_for('view_teacher', hex=id) }}">{{ name }}</a></td> <!-- this will link to the teacher's profile -->
           </tr>
           {% endfor %}
       </table>
