--- a/app/templates/student_searchresults.html
+++ b/app/templates/student_searchresults.html
@@ -7,7 +7,7 @@
   <h1>Find Teachers</h1>
 
   <form action="/search" method="POST">
-    <input type="text" name = "teacher" placeholder="Search...(letters only)"
+    <input type="text" name = "teacher" placeholder="Search... (letters only)"
     onkeydown="return /[a-z]/i.test(event.key)">
     <input type="submit" value="Search">
   </form>
@@ -16,10 +16,10 @@
   <ul>
     {% for hex, data in info %}
     <li>
-      {{data[0]}} ({{data[1]}})
+      {{ data[0] }} ({{ data[1] }})
     </li>
-    <form action="/schedule/{{hex}}" method="POST">
-      <input type="hidden" value="{{data[1]}}" name="email">
+    <form action="{{ url_for('schedule', hex=hex) }}" method="POST">
+      <input type="hidden" value="{{ data[1] }}" name="email">
       <input type="submit" value="View Full Profile"> 
     </form>
     {% endfor %}
