--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,45 +10,47 @@
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
+    <div class="container-fluid px-3 py-2">
       <a class="navbar-brand mb-0 h1" href="{{ url_for('index') }}">TeacherTally</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {% if "google_id" in session %}
-          {% if not is_teacher %}
-          <a class="nav-link" href="{{ url_for('student') }}">Find Teachers</a>
-          {% else %}
-          <a class="nav-link" href="{{ url_for('teacher') }}">Find Teachers</a>
-          {% endif %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Starred Teachers
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{{url_for("starred_teachers")}}"><b>Starred Teachers</b></a></li>
-              {% for hex, name in starred_teachers %}
-              <li><a class="dropdown-item" href="{{url_for("view_teacher", hex=hex)}}">{{name}}</a></li>
-              {% endfor %}
-              {% if not starred_teachers %}
-              <li class="dropdown-item disabled">No starred teachers yet!</li>
+            {% if "google_id" in session %}
+              {% if not is_teacher %}
+              <a class="nav-link" href="{{ url_for('student') }}">Find Teachers</a>
+              {% else %}
+              <a class="nav-link" href="{{ url_for('teacher') }}">Find Teachers</a>
               {% endif %}
-            </ul>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Starred Teachers
+                </a>
+                <ul class="dropdown-menu">
+                  {% for hex, name in starred_teachers %}
+                    <li><a class="dropdown-item" href="{{ url_for('view_teacher', hex=hex) }}">{{ name }}</a></li>
+                  {% endfor %}
+                  {% if not starred_teachers %}
+                    <li class="dropdown-item disabled">No starred teachers yet!</li>
+                  {% else %}
+                    <li><a class="dropdown-item" href="{{ url_for('starred_teachers') }}"><span class="text-danger">Remove Teachers</span></a></li>
+                  {% endif %}
+                </ul>
+              </li>
+            {% endif %}
           </li>
-          {% endif %}
         </ul>
-      </div>
-      <div class="px-3 py-2">
-        <div class="navbar-nav container d-flex flex-wrap justify-content-center">
+        <div class="navbar-nav d-flex flex-wrap justify-content-end">
           <!-- IF LOGGED IN -->
           {% if is_teacher %}
           <a class="nav-link" href="{{ url_for('view_teacherprofile') }}">Profile</a>
