--- a/app/templates/starred_teachers.html
+++ b/app/templates/starred_teachers.html
@@ -4,25 +4,21 @@
 {% block content %}
 <link href="{{url_for('static',filename='css/star.css')}}" rel="stylesheet">
 <div class="container-xxl my-4 bd-layout">
-  <p>Are you a teacher? Please contact us for assistance.</p>
-
   <h1>Starred Teachers</h1>
-  <table>
+  <table class="table">
     <tr>
-      <th style="padding-right:20px;">Remove</th>
-      <th style="padding-right:20px;">Teacher</th>
-
-      <!-- <th style="padding-right:20px;">Classes Taught</th> -->
+      <th>Remove</th>
+      <th>Teacher</th>
     </tr>
     {% for hex, name in starred_teachers %}
     <tr>
       <td>
         <form action="{{ url_for('starred_teachers') }}" method="POST">
-          <input type="submit" value="x">
+          <button type="submit" class="btn btn-danger">X</button>
           <input type="hidden" name="remove_star" value="{{ hex }}">
         </form>
       </td>
-      <td style="padding-top: 15px;"><a href="{{ url_for('view_teacher', hex=hex) }}">{{ name }}</a></td> <!-- this will link to the teacher's profile -->
+      <td style="padding-top: 15px;"><a href="{{ url_for('view_teacher', hex=hex) }}">{{ name }}</a></td>
     </tr>
     {% endfor %}
   </table>
