--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,7 @@
     <div class="container-xxl my-4 bd-layout">
       <div class="alert alert-warning alert-dismissible fade show" role="alert">
         {{ message }}
-        <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
     {% endfor %}
