Add footer with feedback

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,6 +76,10 @@
     {% endfor %}
   {% endwith %}
   {% block content %}{% endblock %}
+  <footer>
+    <div class="d-flex flex-column flex-sm-row justify-content-center py-4 my-4 text-muted">
+      <p>&copy; 2022 Team Loophole | <a href="https://github.com/Lucas-Lee11/P04/issues" class="link-secondary">Feedback</a></p>
+  </footer>
 </body>
 
 </html>
