--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,5 +17,9 @@
   <p>
     To get started, login with your stuy.edu Google account.
   </p>
+  <p>
+    <b>Teachers:</b> Please reach out to us if you have any difficulties setting up a
+    teacher profile.
+  </p>
 </div>
 {% endblock %}
