--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
   <h1>Teacher Profile</h1>
-  {% if is_teacher %}
+  {% if is_own_profile %}
   <p><a href="{{ url_for('edit_teacherprofile') }}">Edit Profile</a></p>
   {% endif %}
   {% if prefix == "None" %}
